# s-tui-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-09-s-tui-rs.md
docs/superpowers/specs/: 2026-07-09-s-tui-rust-rewrite-design.md
src/: app.rs  config.rs  export.rs  main.rs  stress.rs  ui.rs
src/sources/: fan.rs  freq.rs  mod.rs  power.rs  temp.rs  util.rs
