[package]
name = "s-tui-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
description = "Terminal CPU monitoring and stress testing UI (Rust rewrite of s-tui)"
repository = "https://github.com/hermes98761234/s-tui-rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
directories = "5"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
toml = "0.8"
